[package]
name = "getset-macro"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/prk-Jr/getset-macro.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = "*"
quote = "*"
proc-macro2 = "*"
