[package]
name = "getset-macro"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A procedural macro that simplifies the creation of getter, setter and constructor methods for fields in your Rust structs."
repository = "https://github.com/prk-Jr/getset-macro.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
syn = "2.0.35"
quote = "1.0.33"
proc-macro2 = "1.0.67"
